feat: implement updates in smoke-update-macos.sh (part 2)